# bootstrap-node

./: pyproject.toml  site.yml
group_vars/all/: dotfiles.yml  packages.yml
templates/: bash_aliases.j2  bashrc.j2  gitconfig.j2  gitignore.j2  init.vim.j2  tmux.j2  vimrc.j2
