[tool.poetry]
name = "bootstrap-node"
version = "0.1.0"
description = "Bootstrap a VM with desired packages and configuration using Ansible"
authors = ["Jack Hodgkiss <identity@jackhodgkiss.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^10.6.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "24.10.*", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
